# cs50w

./: .gitignore  README.md
project0/: README.md  advanced-search.html  contact.html  contact_styles.css  contact_styles.css.map  contact_styles.scss  hiking.html  image-search.html  index.html  style.css  yoga_styles.css  yogaschedule.html
project1/: README.md  application.py  book_load.py  helpers.py  pyproject.toml  requirements.txt
project1/static/: main.css
project1/templates/: book_details.html  error.html  homesearch.html  layout.html  login.html  register.html
project1/wiki/: README.md
project1/wiki/encyclopedia/: urls.py  views.py
project1/wiki/encyclopedia/static/encyclopedia/: styles.css
project1/wiki/encyclopedia/templates/encyclopedia/: create.html  edit.html  entry.html  index.html  layout.html  search.html
project2/: README.md  application.py  pyproject.toml
project2/commerce/: README.md
project2/commerce/auctions/: admin.py  forms.py  models.py  urls.py  views.py
project2/commerce/auctions/static/auctions/: styles.css
project2/commerce/auctions/templates/auctions/: categories.html  category.html  create_listing.html  index.html  layout.html  listing.html  watchlist.html
project2/commerce/commerce/: settings.py
project2/static/: chatroom.js  main.css
project2/templates/: home.html  login.html
project3/: pyproject.toml
project3/mail/mail/static/mail/: inbox.js  styles.css
project3/mail/mail/templates/mail/: inbox.html
