[tool.poetry]
name = "project1"
version = "0.1.0"
description = "CS50W Project 1: Encyclopedia"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.11"
markdown2 = "^2.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
